src/global.css
@media (prefers-reduced-motion: reduce) {
  body, body * {
    animation-delay: 0ms !important;
    animation-duration: 1ms !important;
    transition-delay: 0ms !important;
    transition-duration: 1ms !important;
  }
}

div.twoColumn {
  display: grid;
  grid-template-columns: 3fr 8fr;
  grid-template-areas: "sidebar content";
}

div.mainContent {
  grid-area: content;
  background-color: var(--background);
}

@media (max-width: 1000px) {
  div.twoColumn {
    grid-template-areas: "sidebar" "content";
    grid-template-columns: 1fr;
  }
}

a:focus,
button:focus {
  outline: 2px dotted var(--focusOutline) !important;
  outline-offset: 2px !important;
}

article.postFull p,
.intro p {
  margin: 1.5rem auto !important;
}

p {
  margin: 0;
  padding: 0;
  color: var(--foreground);
}

html,
body {
  padding: 0;
  margin: 0;
}

.doTransition, body, p, a, h1, h2, h3, h4, code {
  transition: color 0.5s ease, background-color 0.5s ease, border-color 0.5s ease;
}

body {
  font-size: 15px;
  line-height: 1.7;
  color: var(--foreground);
  background-color: var(--background);
  font-weight: 400;
  /* font-family: "Source Sans Pro", sans-serif !important; */
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" !important;
}

body {
  --job: #DC2626;
  --project: #2563EB;
  --org: #04835E;
  --subtitle: #44444C;
  --timeline: #66666F;
  --postBorder: #CBCBD0;
  --sidebarBorder: #CBCBD0;
  --sidebarBackground: #F3F4F6;
  --background: #F9FAFB;
  --postBackground: #F9FAFB;
  --foreground: #2F3948;
  --heading: #1F2937;
  --link: #1f4987;
  --focusOutline: #A1A1AA;
}

@media (prefers-color-scheme: dark) {
  body {
    --job: #F87171;
    --project: #60A5FA;
    --org: #34D399;

    --subtitle: #c7c7c7;
    --timeline: #516170;
    --postBorder: #343d4a;
    --sidebarBorder: #343d4a;
    --sidebarBackground: #212733;
    --background: #1A1F28;
    --postBackground: #212733;
    --foreground: #E5E7EB;
    --heading: #F9FAFB;
    --link: #F9FAFB;
    --focusOutline: #516170;
  }
}

html body[data-theme="light"] {
  --job: #DC2626;
  --project: #2563EB;
  --org: #04835E;

  --subtitle: #44444C;
  --timeline: #66666F;
  --postBorder: #CBCBD0;
  --sidebarBorder: #CBCBD0;
  --sidebarBackground: #F3F4F6;
  --background: #F9FAFB;
  --postBackground: #F9FAFB;
  --foreground: #2F3948;
  --heading: #1F2937;
  --link: #1f4987;
  --focusOutline: #A1A1AA;
}

html body[data-theme="dark"] {
  --job: #F87171;
  --project: #60A5FA;
  --org: #34D399;

  --subtitle: #c7c7c7;
  --timeline: #516170;
  --postBorder: #343d4a;
  --sidebarBorder: #343d4a;
  --sidebarBackground: #212733;
  --background: #1A1F28;
  --postBackground: #212733;
  --foreground: #E5E7EB;
  --heading: #F9FAFB;
  --link: #F9FAFB;
  --focusOutline: #516170;
}

h1,
h2,
h3,
h4 {
  color: var(--heading);
  font-weight: 600 !important;
}

.contentWrapper {
  max-width: 1000px;
  margin: 0 auto;
  padding: 0 5%;
}

span.smallSlash {
  transform: scale(0.9);
  padding: 0 1px;
  display: inline-block;
}

code {
  background-color: var(--postBackground) !important;
  border: 1px solid var(--postBorder);
  border-radius: 3px;
  padding: 0 3px;
}

a {
  color: var(--link);
}

a:hover {
  text-decoration: underline !important;
}

@media (min-width: 400px) {
  body {
    font-size: 17px;
  }
}

picture.fixedSize {
  position: relative;
}

picture.fixedSize * {
  position: absolute;
  top: 0;
  left: 0;
}

